--- a/_data/author.yml
+++ b/_data/author.yml
@@ -1,23 +1,21 @@
-name: Sharad Raj
-dp: https://avatars2.githubusercontent.com/u/36638057?s=460&u=0cbe4fd6b5a3655d91b3eb86db834d0829a0c086&v=4
+name: Chachigo
+dp: https://avatars.githubusercontent.com/u/8048820?s=400&u=662b41b856002a4a9edd24607cec300ddc841310&v=4
 description: "
   <p>
-    Developed by Sharad Raj who lives in India building useful things for the world.
+    Hobby Devlopper since 1996
   </p>
   <br/>
-  <p>
-    You should follow him on <a href='https://github.com/sharadcodes' target='_blank'>Github</a>
-  </P>
+  
 "
-email: dev_sharad@outlook.com
+# email: dev_sharad@outlook.com
 contact:
-  - title: linkedin
-    url: https://www.linkedin.com/in/srsmaurya
+  # - title: linkedin
+  #   url: https://www.linkedin.com/in/srsmaurya
   - title: github
-    url: https://github.com/sharadcodes
+    url: https://github.com/Chachigo
   - title: twitter
-    url: https://twitter.com/iamsharadraj
-  - title: dev
-    url: https://dev.to/sharadcodes
-  - title: email
-    url: mailto:dev_sharad@outlook.com
+    url: https://x.com/ChaChiigo
+  # - title: dev
+  #   url: https://dev.to/sharadcodes
+  # - title: email
+  #   url: mailto:dev_sharad@outlook.com
