--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ markdown: kramdown
 # for atom feed
 author:
   name: Chachigo
-  # email: dev_sharad@outlook.com
+  email: chachigo@duck.com
 
 plugins:
   - jemoji
