--- a/_data/author.yml
+++ b/_data/author.yml
@@ -2,10 +2,10 @@ name: Chachigo
 dp: https://avatars.githubusercontent.com/u/8048820?s=400&u=662b41b856002a4a9edd24607cec300ddc841310&v=4
 description: "
   <p>
-    Hobby Devlopper since 1996
+    Hobby Developer Since 1996
   </p>
 "
-email: chachigo@duck.com
+email: bnnsnow4@duck.com
 contact:
   # - title: linkedin
   #   url: https://www.linkedin.com/in/srsmaurya
@@ -16,5 +16,5 @@ contact:
   # - title: dev
   #   url: https://dev.to/sharadcodes
   - title: email
-    url: mailto:chachigo@duck.com
+    url: mailto:bnnsnow4@duck.com
 # 
