--- a/_data/author.yml
+++ b/_data/author.yml
@@ -5,7 +5,7 @@ description: "
     Hobby Developer Since 1996
   </p>
 "
-email: bnnsnow4@duck.com
+email: contact@chachigo.fr
 contact:
   # - title: linkedin
   #   url: https://www.linkedin.com/in/srsmaurya
@@ -16,5 +16,4 @@ contact:
   # - title: dev
   #   url: https://dev.to/sharadcodes
   - title: email
-    url: mailto:bnnsnow4@duck.com
-# 
+    url: mailto:contact@chachigo.fr
