--- a/_data/author.yml
+++ b/_data/author.yml
@@ -10,6 +10,6 @@ contact:
   - title: twitter
     url: https://x.com/ChaChiigo
   - title: bluesky
-    url: https://bsky.app/profile/chachigo.bsky.social
+    url: https://bsky.app/profile/chachigo.fr
   - title: email
     url: mailto:contact@chachigo.fr
