--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -39,8 +39,8 @@ jobs:
           sudo apt-get install -y rbenv ruby-build
           rbenv install 3.1.0
           rbenv global 3.1.0
-          echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> $GITHUB_ENV
-          echo 'eval "$(rbenv init -)"' >> $GITHUB_ENV
+          export PATH="$HOME/.rbenv/bin:$PATH"
+          eval "$(rbenv init -)"
       - name: Setup Ruby
         uses: ruby/setup-ruby@8575951200e472d5f2d95c625da0c7bec8217c42 # v1.161.0
         with:
