--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -31,9 +31,8 @@ jobs:
         uses: ruby/setup-ruby@4a9ddd6f338a97768b8006bf671dfbad383215f4 # v1.207.0
         with:
           ruby-version: '3.1'
-          bundler-cache: true
-          cache-version: 1
-      - name: Update Gemfile.lock
+          bundler-cache: false
+      - name: Install dependencies
         run: |
           bundle config unset deployment
           bundle install
